--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "react-spring": "^8.0.27",
+    "react-toastify": "^7.0.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
